--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
               }
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "src/assets/iconfont/iconfont.css"
             ],
             "scripts": []
           },
