--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@types/core-js": "^2.5.4",
     "@types/jasminewd2": "^2.0.10",
     "axios": "^0.21.1",
+    "font-awesome": "^4.7.0",
     "ng-zorro-antd": "^11.4.2",
+    "ngx-sortablejs": "^11.1.0",
     "rxjs": "~6.6.0",
+    "sortablejs": "^1.14.0",
     "ts-md5": "^1.2.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -38,6 +41,7 @@
     "@angular/compiler-cli": "~11.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.18",
+    "@types/sortablejs": "^1.10.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
